- adding demo tutorial code from https://mherman.org/blog/designing-a-restful-api-with-node-and-postgres/

--- a/public/package.json
+++ b/public/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-generator": "^4.16.0"
   },
   "dependencies": {
     "express": "^4.16.4"
