--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Compiled source #
-###################
+### GENERIC GITIGNORE
+
+### Compiled source
 *.com
 *.class
 *.dll
@@ -8,8 +9,7 @@
 *.so
 *.map
 
-# Packages #
-############
+### Packages
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
 *.7z
@@ -21,14 +21,12 @@
 *.tar
 *.zip
 
-# Logs and databases #
-######################
+### Logs and databases
 *.log
 *.sql
 *.sqlite
 
-# OS generated files #
-######################
+### OS generated files
 .DS_Store
 .DS_Store?
 ._*
@@ -38,17 +36,18 @@ Thumbs.dbi
 thumbs.db
 __MACOSX
 
-# Other caches / temp files / IDE config #
-##########################################
+### Other caches / temp files / IDE config
 .sass-cache
 .ctrlp
 .project
 .settings
 .classpath
 .vagrant
+.idea
 
-# Package / dependency managers #
-################################
+### Package / dependency managers
 node_modules
 bower_components
-components
+
+### Config
+.env
